# red-shell-recruiting

./: .env  .env.local  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  test.py
.github/: copilot-instructions.md
account/: apps.py  forms.py  hashers.py  models.py  tests.py  urls.py  utilities.py  views.py
app_admin/: celery_app.py  middleware.py  settings.py  urls.py  views.py
backup/: pg_backup.sh
config/: django_nginx.conf  docker-entrypoint-celery.sh  docker-entrypoint-dev.sh  docker-entrypoint.sh  gunicorn_logging.conf
mechanic/: urls.py  views.py
nginx/conf.d/: default.conf
nginx_local/: default.conf  nginx.conf
nginx_local/certs/: selfsigned.crt  selfsigned.key
nginx_local/conf.d/: nginx.conf
red-shell-recruiting/: .commands  .env  .gitignore  docker-compose.yml  manage.py
red-shell-recruiting/account/: hashers.py  utilities.py  views.py
red-shell-recruiting/app_admin/: middleware.py  settings.py  wsgi.py
red-shell-recruiting/config/: django_nginx.conf
red-shell-recruiting/mechanic/: utilities.py
red_shell_recruiting/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
static/css/: candidate.css  (+4 more)
templates/: 404.html  500.html  _base.html  base.html  landing.html  privacy_policy.html  sidebar_desktop_component.html  sidebar_mobile_component.html  terms_of_service.html
terraform/: dev.tfvars  main.tf  output.txt  prod.tfvars  rds.tf  ses.tf  variables.tf  web_app_startup.sh
(+115 files in other folders)
