[tool.poetry]
name = "red-shell-recruiting"
version = "0.1.0"
description = ""
authors = ["Darren Rooney <darren.rooney@benchmarkanalytics.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
python-json-logger = "^3.3.0"
django-cors-headers = "^4.7.0"
psycopg2-binary = "^2.9.10"
django-csp = "^3.8"
django-otp = "1.3.0"
django-two-factor-auth = "^1.17.0"
django-debug-toolbar = "^4.4.6"
psutil = "^7.0.0"
pillow = "^11.2.1"
bcrypt = "^4.3.0"
djangosaml2 = "^1.10.1"
boto3 = "^1.38.3"
django-storages = "^1.14.6"
pyopenssl = "^25.0.0"
cryptography = "^44.0.2"
celery = "^5.5.2"
redis = "^5.2.1"
python-docx = "^1.1.2"
textract = "^1.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app_admin.settings"
